# stryvia

./: .gitattributes  .gitignore  .lintstagedrc.cjs  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  commitlint.config.cjs  package-lock.json  package.json  tsconfig.json  turbo.json
.github/workflows/: ci.yml
.husky/: commit-msg  pre-commit
apps/admin/: .env.local.example  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/admin/src/app/[locale]/: layout.tsx
apps/admin/src/app/[locale]/(app)/: layout.tsx
apps/admin/src/app/[locale]/(app)/audit/: page.tsx
apps/admin/src/app/[locale]/(marketing)/: layout.tsx  page.tsx
apps/admin/src/app/[locale]/auth/: layout.tsx
apps/admin/src/components/layout/: admin-shell.tsx  language-switcher.tsx  sidebar-nav.tsx  stryvia-mark.tsx
apps/admin/src/components/providers/: app-providers.tsx
apps/admin/src/components/ui/: avatar.tsx  badge.tsx  card.tsx  dialog.tsx  table.tsx  tabs.tsx
apps/admin/src/i18n/: request.ts  routing.ts
apps/admin/src/i18n/messages/: ar.json  en.json
apps/admin/src/lib/api/: client.ts  health.ts
apps/admin/src/types/: global.d.ts
apps/brand/: README.md
apps/producer/: .env.local.example  README.md  components.json  eslint.config.mjs  package.json  tailwind.config.ts
apps/producer/src/: middleware.ts
apps/producer/src/app/[locale]/: layout.tsx
apps/producer/src/app/[locale]/(marketing)/: layout.tsx  page.tsx
apps/producer/src/app/[locale]/auth/: layout.tsx
apps/producer/src/components/layout/: app-shell.tsx  language-switcher.tsx  sidebar-nav.tsx  stryvia-mark.tsx
apps/producer/src/components/ui/: alert.tsx  dropdown-menu.tsx  form.tsx
apps/producer/src/i18n/: config.ts
apps/producer/src/i18n/messages/: ar.json  en.json
apps/producer/src/lib/: query-client.ts
apps/producer/src/styles/: tokens.css
docs/: environment.md  smoke-test.md
docs/architecture/: README.md
docs/phases/: phase-1b-context.md
docs/runbooks/: README.md  production-secrets.md
infrastructure/docker/: .env.example  README.md  docker-compose.yml
infrastructure/docker/initdb/: 01-extensions.sql  02-schemas.sql  03-roles.sql
scripts/: README.md  check-env.sh  db-connect.sh  db-reset.sh  setup.sh
services/engine/: .env.example  README.md  alembic.ini  pyproject.toml
services/engine/migrations/: env.py
services/engine/migrations/versions/: f20f88a5a2f4_initial_empty_migration.py
services/engine/src/stryvia_engine/: __init__.py  config.py  logging_config.py  main.py
services/engine/src/stryvia_engine/api/: __init__.py  dependencies.py  errors.py  health.py  router.py
services/engine/src/stryvia_engine/core/: __init__.py  anthropic_client.py  exceptions.py  version.py
services/engine/src/stryvia_engine/db/: __init__.py  base.py  health.py  session.py
services/engine/src/stryvia_engine/domain/: README.md  __init__.py
services/engine/tests/: conftest.py  test_health.py
(+22 files in other folders)
